// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Melodies test suite should generate melodies based on a movement timeline - free rhythm 1`] = `
Array [
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 68,
    "next": 480,
    "note": "G#3",
    "time": 0,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 68,
    "next": 960,
    "note": "G#3",
    "time": 480,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 73,
    "next": 1200,
    "note": "C#4",
    "time": 960,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 73,
    "next": 1440,
    "note": "C#4",
    "time": 1200,
  },
  Object {
    "dur": 360,
    "isRest": false,
    "midi": 71,
    "next": 1800,
    "note": "B3",
    "time": 1440,
  },
  Object {
    "dur": 120,
    "isRest": false,
    "midi": 73,
    "next": 1920,
    "note": "C#4",
    "time": 1800,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 76,
    "next": 2160,
    "note": "E4",
    "time": 1920,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 69,
    "next": 2640,
    "note": "A3",
    "time": 2160,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 69,
    "next": 2880,
    "note": "A3",
    "time": 2640,
  },
  Object {
    "dur": 360,
    "isRest": false,
    "midi": 66,
    "next": 3240,
    "note": "F#3",
    "time": 2880,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 71,
    "next": 3480,
    "note": "B3",
    "time": 3240,
  },
  Object {
    "dur": 120,
    "isRest": false,
    "midi": 66,
    "next": 3600,
    "note": "F#3",
    "time": 3480,
  },
  Object {
    "dur": 120,
    "isRest": false,
    "midi": 64,
    "next": 3720,
    "note": "E3",
    "time": 3600,
  },
  Object {
    "dur": 120,
    "isRest": false,
    "midi": 62,
    "next": 3840,
    "note": "D3",
    "time": 3720,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 68,
    "next": 4320,
    "note": "G#3",
    "time": 3840,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 68,
    "next": 4800,
    "note": "G#3",
    "time": 4320,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 73,
    "next": 5040,
    "note": "C#4",
    "time": 4800,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 73,
    "next": 5280,
    "note": "C#4",
    "time": 5040,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 68,
    "next": 5760,
    "note": "G#3",
    "time": 5280,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 68,
    "next": 6240,
    "note": "G#3",
    "time": 5760,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 73,
    "next": 6480,
    "note": "C#4",
    "time": 6240,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 73,
    "next": 6720,
    "note": "C#4",
    "time": 6480,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 69,
    "next": 7200,
    "note": "A3",
    "time": 6720,
  },
  Object {
    "dur": 320,
    "isRest": false,
    "midi": 67,
    "next": 7520,
    "note": "G3",
    "time": 7200,
  },
  Object {
    "dur": 160,
    "isRest": false,
    "midi": 72,
    "next": 7680,
    "note": "C4",
    "time": 7520,
  },
]
`;

exports[`A Melodies test suite should generate melodies based on a movement timeline - turn rhythm 1`] = `
Array [
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 69,
    "next": 480,
    "note": "A3",
    "time": 0,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 71,
    "next": 960,
    "note": "B3",
    "time": 480,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 73,
    "next": 1200,
    "note": "C#4",
    "time": 960,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 69,
    "next": 1440,
    "note": "A3",
    "time": 1200,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 76,
    "next": 1680,
    "note": "E4",
    "time": 1440,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 73,
    "next": 1920,
    "note": "C#4",
    "time": 1680,
  },
  Object {
    "dur": 160,
    "isRest": false,
    "midi": 68,
    "next": 2080,
    "note": "G#3",
    "time": 1920,
  },
  Object {
    "dur": 80,
    "isRest": false,
    "midi": 68,
    "next": 2160,
    "note": "G#3",
    "time": 2080,
  },
  Object {
    "dur": 720,
    "isRest": false,
    "midi": 66,
    "next": 2880,
    "note": "F#3",
    "time": 2160,
  },
  Object {
    "dur": 160,
    "isRest": false,
    "midi": 68,
    "next": 3040,
    "note": "G#3",
    "time": 2880,
  },
  Object {
    "dur": 80,
    "isRest": false,
    "midi": 68,
    "next": 3120,
    "note": "G#3",
    "time": 3040,
  },
  Object {
    "dur": 720,
    "isRest": false,
    "midi": 66,
    "next": 3840,
    "note": "F#3",
    "time": 3120,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 69,
    "next": 4320,
    "note": "A3",
    "time": 3840,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 71,
    "next": 4800,
    "note": "B3",
    "time": 4320,
  },
  Object {
    "dur": 320,
    "isRest": false,
    "midi": 77,
    "next": 5120,
    "note": "F4",
    "time": 4800,
  },
  Object {
    "dur": 160,
    "isRest": false,
    "midi": 76,
    "next": 5280,
    "note": "E4",
    "time": 5120,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 79,
    "next": 5760,
    "note": "G4",
    "time": 5280,
  },
  Object {
    "dur": 160,
    "isRest": false,
    "midi": 71,
    "next": 5920,
    "note": "B3",
    "time": 5760,
  },
  Object {
    "dur": 80,
    "isRest": false,
    "midi": 74,
    "next": 6000,
    "note": "D4",
    "time": 5920,
  },
  Object {
    "dur": 80,
    "isRest": false,
    "midi": 79,
    "next": 6080,
    "note": "G4",
    "time": 6000,
  },
  Object {
    "dur": 320,
    "isRest": false,
    "midi": 76,
    "next": 6400,
    "note": "E4",
    "time": 6080,
  },
  Object {
    "dur": 320,
    "isRest": false,
    "midi": 74,
    "next": 6720,
    "note": "D4",
    "time": 6400,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 73,
    "next": 6960,
    "note": "C#4",
    "time": 6720,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 69,
    "next": 7200,
    "note": "A3",
    "time": 6960,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 76,
    "next": 7440,
    "note": "E4",
    "time": 7200,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 73,
    "next": 7680,
    "note": "C#4",
    "time": 7440,
  },
]
`;

exports[`A Melodies test suite should generate progression with defined structures 1`] = `
Array [
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 65,
    "next": 480,
    "note": "F3",
    "time": 0,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 65,
    "next": 960,
    "note": "F3",
    "time": 480,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 65,
    "next": 1440,
    "note": "F3",
    "time": 960,
  },
  Object {
    "dur": 360,
    "isRest": false,
    "midi": 73,
    "next": 1800,
    "note": "Db4",
    "time": 1440,
  },
  Object {
    "dur": 120,
    "isRest": true,
    "midi": -1,
    "next": 1920,
    "note": "",
    "time": 1800,
  },
  Object {
    "dur": 360,
    "isRest": false,
    "midi": 73,
    "next": 2280,
    "note": "Db4",
    "time": 1920,
  },
  Object {
    "dur": 120,
    "isRest": true,
    "midi": -1,
    "next": 2400,
    "note": "",
    "time": 2280,
  },
  Object {
    "dur": 360,
    "isRest": false,
    "midi": 73,
    "next": 2760,
    "note": "Db4",
    "time": 2400,
  },
  Object {
    "dur": 120,
    "isRest": true,
    "midi": -1,
    "next": 2880,
    "note": "",
    "time": 2760,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 68,
    "next": 3120,
    "note": "Ab3",
    "time": 2880,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 68,
    "next": 3360,
    "note": "Ab3",
    "time": 3120,
  },
  Object {
    "dur": 320,
    "isRest": false,
    "midi": 58,
    "next": 3680,
    "note": "Bb2",
    "time": 3360,
  },
  Object {
    "dur": 160,
    "isRest": false,
    "midi": 61,
    "next": 3840,
    "note": "Db3",
    "time": 3680,
  },
]
`;
